# csle

./: .flake8  .gitignore  CITATION.cff  Development.md  Installation.md  Publications.md  README.md  SECURITY.md  Usage.md  config.json  executable.sh  integration_tests.sh  js_linter.sh  linter.sh  python_linter.sh  type_checker.sh  unit_tests.sh
simulation-system/libs/csle-attack-profiler/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-attack-profiler/docs/source/: conf.py  csle_attack_profiler.rst
simulation-system/libs/csle-attack-profiler/src/csle_attack_profiler/: tactics.py  (+7 more)
simulation-system/libs/csle-attack-profiler/tests/: statistics_test.json  test_attack_profiler.py  test_hmm_profiler.py  test_kullback.py
simulation-system/libs/csle-attacker/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-attacker/tests/: test_shell_util.py
simulation-system/libs/csle-base/: Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
simulation-system/libs/csle-cli/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-cli/tests/: test_cli.py
simulation-system/libs/csle-cluster/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-cluster/protos/: cluster_manager.proto
simulation-system/libs/csle-cluster/tests/: conftest.py  test_cluster_manager.py
simulation-system/libs/csle-collector/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-collector/protos/: client_manager.proto  host_manager.proto  ryu_manager.proto  snort_ids_manager.proto
simulation-system/libs/csle-collector/tests/: conftest.py  test_client_manager.py  test_client_manager_dao.py  test_docker_stats_manager.py  test_docker_stats_manager_dao.py  test_elk_manager.py  test_host_manager.py  test_host_manager_dao.py  test_kafka_manager.py  test_ossec_ids_manager.py  test_ossec_ids_manager_dao.py  test_ryu_manager.py  test_snort_ids_manager.py  test_snort_ids_manager_dao.py  test_traffic_manager.py
simulation-system/libs/csle-common/: #mypy.txt#  .#mypy.txt  Makefile  README.MD  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-common/tests/: conftest.py  docker network ls  test_aggregated_host_metrics_thread.py  test_aggregated_ossec_ids_log_consumer_thread.py  test_cluster_util.py  test_connection_util.py  test_consumer_threads.py  test_container_controller copy.py  test_container_controller.py  test_dao.py  test_datasets_dao.py  test_docker_dao.py  test_docker_util.py  test_elk_controller.py  test_emulation_action_dao.py  test_emulation_action_result_dao.py  test_emulation_config_dao.py  test_emulation_observation_dao.py  test_emulation_util.py  test_experiment_util.py  test_export_util.py  test_flags_controller.py  test_general_util.py  test_grpc_util.py  test_host_controller.py  test_import_util.py  test_installation_controller.py  test_jobs_dao.py  test_kafka_controller.py  test_management_controller.py  test_management_dao.py  test_management_util.py  test_metastore_facade.py  test_models.py  test_multiprocessing_util.py  test_ossec_ids_controller.py  test_ovs_controller.py  test_plotting_util.py  test_read_emulation_util.py  test_resource_constraints_controller.py  (+11 more)
simulation-system/libs/csle-defender/: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
simulation-system/libs/csle-defender/tests/: conftest.py  test_defender_stopping_middleware.py  test_defender_update_state_middleware.py
simulation-system/libs/csle-rest-api/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-rest-api/tests/: conftest.py  test_pages.py  test_resources_alpha_vec_policies.py  test_resources_cadvisor.py  test_resources_cluster_status.py  test_resources_config.py  test_resources_data_collection_jobs.py  test_resources_docker.py  test_resources_dqn_policies.py  test_resources_empirical_system_models.py  test_resources_emulation_statistics.py  test_resources_emulation_traces.py  test_resources_emulations.py  test_resources_emulations_executions.py  test_resources_experiments.py  test_resources_file.py  test_resources_flask.py  test_resources_fnn_w_softmax_policies.py  test_resources_gaussian_mixture_system.py  test_resources_gp_system_models.py  test_resources_grafana.py  test_resources_images.py  test_resources_linear_threshold_policies.py  test_resources_login.py  test_resources_logs.py  test_resources_mcmc_system_models.py  test_resources_multi_threshold_policies.py  test_resources_nginx.py  test_resources_node_exporter.py  test_resources_pgadmin.py  test_resources_postgresql.py  test_resources_ppo_policies.py  test_resources_prometheus.py  test_resources_sdn_controllers.py  test_resources_server_cluster.py  test_resources_simulation_traces.py  test_resources_simulations.py  test_resources_statistics_datasets.py  test_resources_system_identification.py  test_resources_system_identification_jobs.py  (+10 more)
simulation-system/libs/csle-system-identification/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/csle-system-identification/tests/: conftest.py  test_empirical_algorithm.py  test_shell_util.py
simulation-system/libs/gym-csle-stopping-game/: .gitignore  Makefile  README.MD  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
simulation-system/libs/gym-csle-stopping-game/tests/: conftest.py  test_stopping_game_dao.py  test_stopping_game_env.py  test_stopping_game_mdp_attacker_env.py  test_stopping_game_pomdp_defender_env.py  test_stopping_game_util.py
simulation-system/python/csle-agents/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
(+10879 files in other folders)
