[metadata]
name = csle_base
version = attr: csle_base.__version__
description = Library with base classes and definitions for CSLE
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Cyber-Security Markov-Games Markov-Decision-Processes
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    pytest-grpc>=0.8.0
    mypy>=1.3.0
    flake8>=3.9
    flake8-rst-docstrings>=0.3.0
    tox>=3.24
    sphinx>=5.3.0
    sphinxcontrib-napoleon>=0.7
    sphinx-rtd-theme>=1.1.1
    twine>=4.0.2
    build>=0.10.0

[options.package_data]
csle_ryu = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*,.tox
ignore = E741, W503, W504, F821, W605
rst-roles = class, func, ref
rst-directives = envvar, exception
rst-substitutions = version
extend-ignore = D401, D400

