[metadata]
name = csle_cli
version = attr: csle_cli.__version__
description = CLI tool for CSLE
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Cyber-Security Markov-Games Markov-Decision-Processes
;py_modules =
;    - csle_cli
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
;url="https://github.com/Limmen/csle"
;download_url="https://github.com/Limmen/csle/archive/0.0.1.tar.gz"

[options]
install_requires =
    click>=8.1.3
    csle-base>=0.2.14
    csle-common>=0.2.14
    csle-cluster>=0.2.14
    csle-collector>=0.2.9
    csle-attacker>=0.2.14
    csle-defender>=0.2.14
    csle-system-identification>=0.2.14
    gym-csle-stopping-game>=0.2.14
    gym-csle-intrusion-response-game>=0.2.14
    csle-agents>=0.2.14
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    pytest-grpc>=0.8.0
    mypy>=1.3.0
    flake8>=3.9
    tox>=3.24


[options.package_data]
csle_cli = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*
ignore = E741, W503, W504, F821, W605

[options.entry_points]
console_scripts =
    csle=csle_cli.cli:commands
