[metadata]
name = csle_common
version = attr: csle_common.__version__
description = Common functionality of the Cyber Security Learning Environment (CSLE)
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Cyber-Security Markov-Games Markov-Decision-Processes
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
;url="https://github.com/Limmen/csle"
;download_url="https://github.com/Limmen/csle/archive/0.0.1.tar.gz"

[options]
install_requires =
    gym>=0.21
    pyglet>=2.0.0
    numpy>=1.23.5
    torch>=1.13.0
    docker>=6.0.1
    paramiko>=2.12.0
    stable_baselines3>=0.14.4
    random_username>=1.0.2
    psycopg>=3.1.4
    click>=8.1.3
    flask>=2.2.2
    waitress>=2.1.2
    csle_collector>=0.0.74
    psutil>=5.9.4
    csle-ryu>=0.1.1
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    sphinx>=5.3.0
    sphinxcontrib-napoleon>=0.7
    sphinx-rtd-theme>=1.1.1

[options.package_data]
csle_common = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*
ignore = E741, W503, W504, F821, W605

