[project]
name = "csle-rest-api"
description = "CSLE REST API"
dynamic = ["version", "authors", "requires-python"]
license = { file = "LICENSE.md" }
readme = "README.md"
keywords = ["Reinforcement-Learning", "Cyber-Security", "Markov-Games", "Markov-Decision-Processes"]
maintainers = [
    { name = "Kim Hammar", email = "kimham@kth.se" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "csle-base>=0.7.3",
    "csle-common>=0.7.3",
    "csle-agents>=0.7.3",
    "csle-cluster>=0.7.3",
    "csle-system-identification>=0.7.3",
    "csle-ryu>=0.7.3",
    "flask>=2.2.2",
    "waitress>=2.1.2",
    "flask-socketio>=5.3.2",
    "bcrypt>=4.0.1",
    "pyopenssl>=22.1.0",
    "eventlet>=0.33.2",
    "dnspython==2.2.1",
    "gevent>=22.1.2",
    "paramiko>=3.2.0",
    "types-paramiko>=3.2.0.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.1"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.6.0",
    "pytest-grpc>=0.8.0",
    "grpcio>=1.69.0",
    "grpcio-tools>=1.69.0",
    "mypy>=1.4.1",
    "mypy-extensions>=1.0.0",
    "mypy-protobuf>=3.5.0",
    "types-PyYAML>=6.0.12.11",
    "types-paramiko>=3.2.0.0",
    "types-protobuf>=4.23.0.3",
    "types-requests>=2.31.0.1",
    "types-urllib3>=1.26.25.13",
    "flake8>=6.1.0",
    "flake8-rst-docstrings>=0.3.0",
    "tox>=3.24",
    "sphinx>=5.3.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-rtd-theme>=1.1.1",
    "twine>=4.0.2",
    "build>=0.10.0"
]

[project.urls]
"Homepage" = "https://limmen.dev/csle"
"Source" = "https://github.com/Limmen/csle"

[build-system]
requires = ["setuptools==75.7.0", "flask-socketio>=5.3.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=csle_rest_api -p no:warnings"
testpaths = [
    "tests",
]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true