[metadata]
name = csle_rest_api
version = attr: csle_rest_api.__version__
description = CSLE REST API
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Cyber-Security Markov-Games Markov-Decision-Processes
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
install_requires =
    csle-base>=0.7.4
    csle-common>=0.7.4
    csle-agents>=0.7.4
    csle-cluster>=0.7.4
    csle-system-identification>=0.7.4
    csle-ryu>=0.7.4
    flask>=2.2.2
    flask-socketio>=5.5.1,
    flask-cors>=5.0.0,
    waitress>=2.1.2
    flask-socketio>=5.3.2
    bcrypt>=4.0.1
    pyopenssl>=22.1.0
    eventlet>=0.33.2
    dnspython==2.2.1
    gevent>=22.1.2
    paramiko>=3.2.0
    types-paramiko>=3.2.0.0
    requests>=2.31.0
    types-requests>=2.31.0.1
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    grpcio>=1.69.0
    grpcio-tools>=1.69.0
    pytest-grpc>=0.8.0
    mypy>=1.4.1
    mypy-extensions>=1.0.0
    mypy-protobuf>=3.5.0
    types-PyYAML>=6.0.12.11
    types-paramiko>=3.2.0.0
    types-protobuf>=4.23.0.3
    types-requests>=2.31.0.1
    types-urllib3>=1.26.25.13
    flake8>=6.1.0
    flake8-rst-docstrings>=0.3.0
    tox>=3.24
    sphinx>=5.3.0
    sphinxcontrib-napoleon>=0.7
    sphinx-rtd-theme>=1.1.1
    twine>=4.0.2
    build>=0.10.0

[options.package_data]
csle_rest_api = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*,.tox
ignore = E741, W503, W504, F821, W605
rst-roles = class, func, ref
rst-directives = envvar, exception
rst-substitutions = version
extend-ignore = D401, D400, D100, RST305, RST219, D205, D202, D200, D204, RST206, W293, D403, D402, RST306
