[metadata]
name = gym_csle_stopping_game
version = attr: gym_csle_stopping_game.__version__
description = OpenAI gym reinforcement learning environment of a Dynking (Optimal stopping) game in CSLE
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Cyber-Security Markov-Games Markov-Decision-Processes
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
;url="https://github.com/Limmen/csle"
;download_url="https://github.com/Limmen/csle/archive/0.0.1.tar.gz"

[options]
install_requires =
    gym>=0.21
    csle-common>=0.0.7
    csle-attacker>=0.0.7
    csle-defender>=0.0.7
    csle-collector>=0.0.92
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    sphinx>=5.3.0
    sphinxcontrib-napoleon>=0.7
    sphinx-rtd-theme>=1.1.1

[options.package_data]
gym_csle_stopping_game = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*
ignore = E741, W503, W504, F821

