[metadata]
name = csle_agents
description = Reinforcement learning agents for CSLE
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
url="https://github.com/Limmen/csle"
download_url="https://github.com/Limmen/csle/archive/0.0.1.tar.gz"

[options]
packages =
    csle_agents
install_requires =
    csle-common
    csle-collector
    csle-attacker
    csle-defender
    csle-system-identification
    gym-csle-stopping-game
    stable-baselines3
    pulp
    bayesian-optimization
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
csle_agents = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*
ignore = E741, W503, W504, F821